updated code to display lightwidget correctly

--- a/web/src/components/InstagramFeed.astro
+++ b/web/src/components/InstagramFeed.astro
@@ -77,7 +77,7 @@
 					<div class="absolute inset-0 bg-gradient-to-br from-cream via-white to-cream rounded-2xl opacity-50"></div>
 					
 					<div class="relative bg-gradient-to-br from-cream to-white rounded-2xl p-2 shadow-inner border border-gold/20">
-						<!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="https://cdn.lightwidget.com/widgets/00369311e8cd5537b0a99cfe8f79a548.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+						<!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/ff49b5755964542eb4e5eb78f9b4d631.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
 					</div>
 				</div>
 				
